# ChessBrain

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: board.hpp  main.hpp  pawn.hpp  piece.hpp  shader.hpp  texture.hpp
include/game/: aiPlayer.hpp  board.hpp  game.hpp  humanPlayer.hpp  move.hpp  player.hpp  spot.hpp
include/graphics/: renderer.hpp  shader.hpp  sprite.hpp  texture.hpp
include/pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp
include/tensorflow/: THIRD_PARTY_TF_C_LICENSES
keras_rest/: Chess_AI.ipynb  Chess_Ai_Trainer_v4.ipynb  chess_best_model.json  run_keras_server.py  test_keras_predict.py
keras_rest/models/: chessai.keras  model.h5  model_885boards_100epochs.h5  model_91boards_100epochs.h5  model_91boards_10epochs.h5
libs/: glfw3.lib  libcurl_imp.lib  libprotobuf-lite.lib
models/: chessai.keras  model.pb  saved_model.pb
src/: main.cpp
src/game/: aiPlayer.cpp  board.cpp  game.cpp  humanPlayer.cpp  move.cpp  player.cpp  spot.cpp
src/graphics/: renderer.cpp  shader.cpp  sprite.cpp  stb_image.cpp  texture.cpp
src/lib/: glad.c
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
src/shaders/: board.frag  default.frag  default.vert  piece.frag  piece.vert
